--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "disconnect": "^1.2.1"
+    "disconnect": "^1.2.1",
+    "redis": "^2.8.0"
   },
   "engines": {
     "node": "8.x"
