--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "disconnect": "^1.2.1",
-    "redis": "^2.8.0"
+    "ioredis": "^3.2.2"
   },
   "engines": {
     "node": "8.x"
