--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "disconnect": "^1.2.1",
-    "ioredis": "^3.2.2"
+    "ioredis": "^3.2.2",
+    "cors": "^2.8.4"
   },
   "engines": {
     "node": "8.x"
