--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.3",
     "disconnect": "^1.2.1",
     "ioredis": "^3.2.2",
-    "cors": "^2.8.4"
+    "cors": "^2.8.4",
+    "compression": "^1.7.2"
   },
   "engines": {
     "node": "8.x"
