--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
     "disconnect": "^1.2.1",
     "ioredis": "^3.2.2",
     "cors": "^2.8.4",
-    "compression": "^1.7.2"
+    "compression": "^1.7.2",
+    "express": "^4.16.3"
   },
   "engines": {
     "node": "8.x"
