--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A proxy API to cache requests to Discogs",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "now --dotenv -e NODE_ENV=production"
   },
   "repository": {
     "url": "https://glitch.com/edit/#!/edapi"
